--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.error.path=/error-spring
 server.port=8080
-
+spring.devtools.restart.enabled=true
 
 host.and.port.hris=https://119.28.20.4:8443/hris/
 openendpoint.getauth = dologinservice
@@ -22,5 +22,6 @@ filestoragecontroller = C:\\Users\\YudiSabri\\Desktop\\docReceive
 filekeyp12=C:\\Users\\YudiSabri\\Desktop\\docReceive\\dev.localhost.com.p12
 
 spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.cache=false
